// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleChoice snapshot test 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;InCorrect!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`MultipleChoice snapshot test with 2 images using markdown text format 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title with Image&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      &lt;img src="https://via.placeholder.com/150" alt="Sample Image"&gt;
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1

            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2

            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Incorrect!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              C
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              &lt;img src="https://via.placeholder.com/150" alt="Sample Image"&gt;
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Image Feedback&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback with Image
&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`MultipleChoice snapshot test with Moodle text format 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;InCorrect!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`MultipleChoice snapshot test with image 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title with Image&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem with Image
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Incorrect!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              C
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              &lt;img src="https://via.placeholder.com/150" alt="Sample Image"&gt;
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Image Feedback&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback with Image&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`MultipleChoice snapshot test with image using markdown text format 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title with Image&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem with Image

                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1

            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2

            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Incorrect!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              C
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              &lt;img src="https://via.placeholder.com/150" alt="Sample Image"&gt;
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Image Feedback&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback with Image
&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`MultipleChoice snapshot test with katex 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      &lt;span class="katex-display"&gt;&lt;span class="katex"&gt;&lt;span class="katex-mathml"&gt;&lt;math xmlns="http://www.w3.org/1998/Math/MathML" display="block"&gt;&lt;mrow&gt;&lt;mfrac&gt;&lt;mrow&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;/mrow&gt;&lt;mrow&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;/mrow&gt;&lt;/mfrac&gt;&lt;/mrow&gt;\\frac{zzz}{yyy}&lt;/math&gt;&lt;/span&gt;&lt;span class="katex-html" aria-hidden="true"&gt;&lt;span class="base"&gt;&lt;span class="strut" style="height:1.988em;vertical-align:-0.8804em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mopen nulldelimiter"&gt;&lt;/span&gt;&lt;span class="mfrac"&gt;&lt;span class="vlist-t vlist-t2"&gt;&lt;span class="vlist-r"&gt;&lt;span class="vlist" style="height:1.1076em;"&gt;&lt;span style="top:-2.314em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mord mathnormal" style="margin-right:0.03588em;"&gt;yyy&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.23em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="frac-line" style="border-bottom-width:0.04em;"&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.677em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mord mathnormal" style="margin-right:0.04398em;"&gt;zzz&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-s"&gt;​&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-r"&gt;&lt;span class="vlist" style="height:0.8804em;"&gt;&lt;span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="mclose nulldelimiter"&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`MultipleChoice snapshot test with katex, using html text format 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Choix multiple&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      &lt;span class="katex-display"&gt;&lt;span class="katex"&gt;&lt;span class="katex-mathml"&gt;&lt;math xmlns="http://www.w3.org/1998/Math/MathML" display="block"&gt;&lt;mrow&gt;&lt;mfrac&gt;&lt;mrow&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;/mrow&gt;&lt;mrow&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;/mrow&gt;&lt;/mfrac&gt;&lt;/mrow&gt;\\frac{zzz}{yyy}&lt;/math&gt;&lt;/span&gt;&lt;span class="katex-html" aria-hidden="true"&gt;&lt;span class="base"&gt;&lt;span class="strut" style="height:1.988em;vertical-align:-0.8804em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mopen nulldelimiter"&gt;&lt;/span&gt;&lt;span class="mfrac"&gt;&lt;span class="vlist-t vlist-t2"&gt;&lt;span class="vlist-r"&gt;&lt;span class="vlist" style="height:1.1076em;"&gt;&lt;span style="top:-2.314em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mord mathnormal" style="margin-right:0.03588em;"&gt;yyy&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.23em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="frac-line" style="border-bottom-width:0.04em;"&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.677em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mord mathnormal" style="margin-right:0.04398em;"&gt;zzz&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-s"&gt;​&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-r"&gt;&lt;span class="vlist" style="height:0.8804em;"&gt;&lt;span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="mclose nulldelimiter"&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-success text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-success border-success"&gt;
              A
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 1
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;Correct!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        
        &lt;div class="mb-3"&gt;
          &lt;div class="d-flex align-items-center w-100 p-3 choice-button bg-danger text-white"&gt;
            &lt;div class="choice-letter d-flex align-items-center justify-content-center me-3 rounded-circle border bg-white text-danger border-danger"&gt;
              B
            &lt;/div&gt;
            &lt;div class="flex-grow-1 choice-button-content"&gt;
              Choice 2
            &lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="mt-2"&gt;&lt;div class="alert alert-info small"&gt;InCorrect!&lt;/div&gt;&lt;/div&gt;
        &lt;/div&gt;
        &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;
